2012-05-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c (read_terminal_list): Terminate the terminal
	name with \0.

2012-05-22  Jordan Uggla  <jordan.uggla@gmail.com>

	* docs/grub-dev.texi: Remove dot from .png.

2012-05-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/gpt.c (grub_gpt_partition_map_iterate): Accept
	protective entry in any slot.
	* grub-core/partmap/msdos.c (grub_partition_msdos_iterate): Reject
	if protective entry is found in any slot.

	Protective entry in non-first slot make no sense but is a widespread
	brain damage.

2012-05-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/squash4.c (grub_squash_read_data): Add missing byte-swap.

2012-05-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/reiserfs.c (grub_reiserfs_iterate_dir): Fix size byteswap
	with old reiserfs.
	(grub_reiserfs_open): Don't free root.

2012-05-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fshelp.c (grub_fshelp_find_file): Set currnode to 0
	after freeing for safety.

2012-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/sleep.c (do_print): Add missing grub_refresh.
	Reported by: Jordan Uggla.

2012-05-21  Jordan Uggla  <jordan.uggla@gmail.com>

	* docs/grub.texi Fix documentation of GRUB_HIDDEN_TIMOUNT to match the
	actual implementation. Specifically, clarify that the grub menu will
	be displayed for GRUB_TIMOUT seconds after the hidden timeout has
	passed.

2012-05-21  Benjamin Herrenschmidt <benh@kernel.crashing.org>

	* grub-core/kern/powerpc/dl.c (trampoline_template): Use r12 instead
	of r0.

2012-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove unjustified hard dependency of normal.mod on gfxterm.

	* include/grub/term.h (grub_term_output): New member fullscreen.
	* include/grub/gfxterm.h (grub_gfxterm_fullscreen): Removed.
	* grub-core/term/gfxterm.c (grub_gfxterm_fullscreen): Make static.
	(grub_gfxterm): Set .fullscreen.