@@ -1,5 +1,10 @@
 2012-05-23  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/normal/misc.c (grub_normal_print_device_info): Dsiplay
+	ext* instead of ext2.
+
+2012-05-23  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/normal/term.c (read_terminal_list): Terminate the terminal
 	name with \0.
 
